src/test/ui/traits/impl-for-module.stderr
error[E0573]: expected type, found module `a`
  --> $DIR/impl-for-module.rs:7:12
   |
LL | trait A {
   | ------- similarly named trait `A` defined here
...
LL | impl A for a {
   |            ^ help: did you mean `A`? (a similarly named trait)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0573`.
